[package]
name = "hort-adapters-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "hort PostgreSQL implementations of outbound port traits"

[lints]
workspace = true

[dependencies]
hort-domain = { path = "../hort-domain" }
hort-app    = { path = "../hort-app" }

sqlx   = { workspace = true }
tokio  = { workspace = true }
uuid   = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
# `subscription_repo.rs` parses webhook URLs back out of the
# `subscriptions.target` JSONB column to reconstruct
# `SubscriptionTarget::Webhook { url: url::Url, .. }`. The domain side
# already pins `url` (see crates/hort-domain/Cargo.toml); the adapter
# needs its own direct dep to `use url::Url` at the wire boundary.
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# `save_managed` does a global `DELETE FROM permission_grants WHERE
# managed_by='gitops'` full reconcile, so the `save_managed_*` tests
# corrupt each other's preconditions when `cargo test --lib` runs them
# in parallel against one shared DB. `#[serial(gitops_partition)]`
# serialises that family without affecting unrelated tests.
serial_test = { workspace = true }
# `hort_audit_events_blocked_total` emission tests capture a local recorder
# with `metrics_util::debugging::DebuggingRecorder` and assert the label
# tuples that fire. Mirrors `hort-app`'s usage of the same feature flag.
metrics-util = { workspace = true, features = ["debugging"] }
